# fenrir

./: .gitignore  .vercelignore  README-DEPLOY.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py  main.py
frontend/: form.html  index.html  result.html  robots.txt  share.html  sitemap.xml  waiting.html
frontend/css/: main.css
frontend/js/: api.js  chart.js  utils.js
scripts/: audit_phase3.py  e2e_fix_verify.py  e2e_screenshot.py  generate_og_image.py
src/: __init__.py  bazi.py  cities.py  kline.py  llm.py  narrative_sanitize.py  personality.py  pipeline.py  prompt.py  sanitize.py  score.py  strength.py
tests/: test_backtest.py  test_cities_200.py  test_cities_resolve.py  test_end_to_end.py  test_personality.py  test_phase3.py  test_rate_limit.py
